--- a/src/member_mg.html
+++ b/src/member_mg.html
@@ -48,7 +48,7 @@
         </article>
 
 
-        <script src="./js/member_mg.min.js"></script>
+        <script src="./js/member_mg.js"></script>
         
 </body>
 </html>
