feat: 新增首頁插圖

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,26 @@
     @@include('./layout/header.html')
 
     <!-- 首圖 -->
+    <div class="outer-wrapper">
+
     <div class="indexTop container-fluid">
-        <!-- <img class="indexTopBg" src="img/index/index_top_bg_1920.png" alt=""> -->
+       <img src="img/index/sun.png" alt="sun" class="sun">
+       <img src="img/index/cloud.png" alt="cloud" class="top-cloud top-cloud1">
+       <img src="img/index/cloud.png" alt="cloud" class="top-cloud top-cloud2">
+       <img src="img/index/cloud.png" alt="cloud" class="top-cloud top-cloud3">
+       <img src="img/index/cloud.png" alt="cloud" class="top-cloud top-cloud4">
+       <img src="img/index/horse.png" alt="horse" class="top-horse">
+       <img src="img/index/deer.png" alt="deer" class="top-deer">
+       <img src="img/index/sheep.png" alt="sheep" class="top-sheep">
+       <img src="img/index/pig.png" alt="pig" class="top-pig">
+       <img src="img/index/alpaca.png" alt="alpaca" class="top-alpaca">
+       <img src="img/index/cow.png" alt="cow" class="top-cow">
     </div>
 
     <!-- Section 1: 介紹 -->
     <section class="indexWelcome container-lg">
+        <img src="img/index/cloud.png" alt="cloud" class="side-cloud cloud5">
+        <img src="img/index/cloud.png" alt="cloud" class="side-cloud cloud6">
         <h3 class="welcomeTitle">歡迎來到Sìkha牧場</h3>
         <img src="img/material/circle_yellow_800.png" class="decYellow" alt="decoration_circle">
         <img src="img/index/welcometo.png" class="mainImg" alt="cow_eating_grass">
@@ -26,8 +40,10 @@
         </div>
     </section>
 
+
     <!-- Section 2: 最新消息 -->
     <section class="indexNews container-lg margintop_250">
+        <img src="img/index/cloud.png" alt="cloud" class="side-cloud cloud7">
         <div class="indexNewsTitle">
             <h3>最新消息</h3>
             <h6>NEWS</h6>
@@ -109,6 +125,8 @@
             <h5 class="viewText">瀏覽詳情</h5>
         </a>
     </section>
+    
+    </div>
 
     <!-- footer -->
     @@include('./layout/footer.html')
