style:商品內頁 調整頁面、RWD

--- a/src/product_detail.html
+++ b/src/product_detail.html
@@ -22,29 +22,31 @@
         <p class="pd_bread">首頁 | 周邊產品 | 草莓牛奶(六入組)</p>
         <div class="pd_area">
             <!-- 商品主圖 -->
-            <div class="splide01">
-                <div class="splide__track">
-                    <ul class="splide__list pd_pic">
-                        <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt="" style="max-width: 100%;">
-                        </li>
-                        <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt="">
-                        </li>
-                        <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt="">
-                        </li>
-                    </ul>
-                </div>
-                <div id="thumbnail-slider1" class="splide">
+            <div>
+                <div class="pd_pic">
+                    <div class="splide01">
+                        <div class="splide__track">
+                            <ul class="splide__list">
+                                <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt=""></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div id="thumbnail-slider1" class="splide">
 
-                    <div class="splide__track">
-
-                        <ul class="splide__list under">
-                            <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt=""></li>
-                            <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt=""></li>
-                            <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt=""></li>
-                        </ul>
-
+                        <div class="splide__track">
+    
+                            <ul class="splide__list under">
+                                <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt=""></li>
+                            </ul>
+    
+                        </div>
                     </div>
                 </div>
+
             </div>
             <!-- 主圖區塊結束 -->
             <div class="pd_info">
@@ -70,6 +72,7 @@
         </div>
 
         <hr class="pd__hr">
+        <!-- 專推 -->
         <h3 class="pd_intro_h3">商品描述</h3>
         <div class="intro_area">
             <div class="pd_intro">
@@ -84,46 +87,46 @@
             </div>
         </div>
         <h3 class="pd_recommend_h3">推薦商品</h3>
-<!-- 推薦商品 -->
-<div>
-        <div class="pd_recommend " id="splide02">
-            <div class="splide__track">
-                <ul class="pd_recommend_list splide__list">
+        <!-- 推薦商品 -->
+        <div>
+            <div class="pd_recommend " id="splide02">
+                <div class="splide__track">
+                    <ul class="pd_recommend_list splide__list">
 
-                    <li class="splide__slide">
-                        <a href="#">
-                            <img src="./img/porducts/papaya.jpg" alt="">
-                            <div class="pd_recommend_text">
-                                <p class="pd_recommend_name">咖啡牛奶</p>
-                                <p class="pd_recommend_price">299</p>
-                            </div>
-                        </a>
-                    </li>
+                        <li class="splide__slide">
+                            <a href="#">
+                                <img src="./img/porducts/papaya.jpg" alt="">
+                                <div class="pd_recommend_text">
+                                    <p class="pd_recommend_name">咖啡牛奶</p>
+                                    <p class="pd_recommend_price">299</p>
+                                </div>
+                            </a>
+                        </li>
 
-                    <li class="splide__slide">
-                        <a href="#">
-                            <img src="./img/porducts/papaya.jpg" alt="">
-                            <div class="pd_recommend_text">
-                                <p class="pd_recommend_name">咖啡牛奶</p>
-                                <p class="pd_recommend_price">299</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="splide__slide">
-                        <a href="#">
-                            <img src="./img/porducts/papaya.jpg" alt="">
-                            <div class="pd_recommend_text">
-                                <p class="pd_recommend_name">咖啡牛奶</p>
-                                <p class="pd_recommend_price">299</p>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
+                        <li class="splide__slide">
+                            <a href="#">
+                                <img src="./img/porducts/papaya.jpg" alt="">
+                                <div class="pd_recommend_text">
+                                    <p class="pd_recommend_name">咖啡牛奶</p>
+                                    <p class="pd_recommend_price">299</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="splide__slide">
+                            <a href="#">
+                                <img src="./img/porducts/papaya.jpg" alt="">
+                                <div class="pd_recommend_text">
+                                    <p class="pd_recommend_name">咖啡牛奶</p>
+                                    <p class="pd_recommend_price">299</p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
 
-    </div>
-<!-- 推薦商品結束 -->
+        </div>
+        <!-- 推薦商品結束 -->
 
     </main>
 
