--- a/src/product_detail.html
+++ b/src/product_detail.html
@@ -59,8 +59,8 @@
                         <h5>數量</h5>
 
                         <div id="pd_stockCount">
-                            <button class="pd_stockCount_btn">－</button><input type="text" id="pd_stockCount_input"
-                                value="1" name="add_prd_count"><button class="pd_stockCount_btn">＋</button>
+                            <button class="pd_stockCount_btn" id="pd_stockCount_minus">－</button><input type="text" id="pd_stockCount_input"
+                                value="1" name="add_prd_count" readonly><button class="pd_stockCount_btn" id="pd_stockCount_plus">＋</button>
                         </div>
                         <h5>在庫數量：<span id="pd_inStock">999</span></h5>
                     </div>
