chore: 安裝 gsap, feat: 首頁動畫

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     @@include('./layout/head.html', {
     "title" : "Sìkha 牧場"
     })
+
+    <script src="js/vendors/gsap.js"></script>
 </head>
 
 <body>
