fix: animal.scss 選取器原用section標籤

--- a/src/animal.html
+++ b/src/animal.html
@@ -15,7 +15,7 @@
         <!-- main -->
 
         <img class = animal_banner src="./img/animal/animal_banner.png" alt="">
-        <div class = "container">
+        <div class = "animal-container">
                 <!-- map -->
                 <div class="icon_map_r ">
                     <img class = map src="./img/animal/map.png" alt="">
