feat: 修改checkout動態(html&js),

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -6,176 +6,186 @@
 	<body>
 		<!-- header -->
 		@@include('./layout/header.html')
-		<!---------- 流程步驟 1 2 3 ---------->
-		<ul class="step container-lg">
-			<li class="active">
-				<p class="stepNB">1</p>
-				訂單資料
-			</li>
-			<li>
-				<p class="stepNB">2</p>
-				付款資訊
-			</li>
-			<li>
-				<p class="stepNB">3</p>
-				訂單確認
-			</li>
-		</ul>
-		<!---------- 結帳流程一 ---------->
-		<div class="stepA container-lg">
-			<!--********** 購物車 **********-->
-			<ul id="step1" class="step1">
-				<li class="carName">購物車</li>
-				<li class="carTitle">
-					<p>商品資料</p>
-					<p>價格</p>
-					<p>數量</p>
-					<p>小計</p>
+		<div id="step">
+			<!---------- 流程步驟 1 2 3 ---------->
+			<ul class="step container-lg">
+				<li :class="{ active: step == 'A' }">
+					<p class="stepNB">1</p>
+					訂單資料
 				</li>
-				<li v-for="(product, index) in products" class="carTitle carInfo">
-					<img :src="product.img" class="infoImg" />
-					<p>{{product.info}}</p>
-					<p>NT${{product.price}}</p>
-					<p>
-						<input
-							type="button"
-							class="addBtn mbBtn"
-							value="-"
-							@click="add(index, -1)"
-						/><input
-							type="text"
-							class="quantity"
-							v-model="product.quantity"
-						/><input
-							type="button"
-							class="subBtn mbBtn"
-							value="+"
-							@click="add(index, 1)"
-						/>
-					</p>
-					<p>NT${{product.price * product.quantity}}</p>
-					<img src="./img/icon/garbageCan.png" class="garbageCan" @click="del(index)"/>
+				<li :class="{ active: step == 'B' }">
+					<p class="stepNB">2</p>
+					付款資訊
+				</li>
+				<li :class="{ active: step == 'C' }">
+					<p class="stepNB">3</p>
+					訂單確認
 				</li>
 			</ul>
-			<!--********** 訂單資訊 **********-->
-			<ul id="step" class="step1 step1Down">
-				<li class="carName">訂單資訊</li>
-				<li class="productInfo">
-					<p>運費</p>
-					<p>NT$ 0</p>
-					<p>合計</p>
-					<p>NT$ {{sumTotal}}</p>
-				</li>
-			</ul>
-			<button class="gotoPay">前往結帳</button>
-		</div>
-
-		<!---------- 結帳流程二 ---------->
-		<div class="stepB container-lg">
-			<!--********** 表格1 總計 **********-->
-			<ul id="step2" class="step2">
-				<li class="carName2" v-for="product in products">
-					<p class="titleTop">總計 {{product.total}}</p>
-					<p class="titleDown">購物車(共{{product.quantity}}項)</p>
-				</li>
-				<li class="carTitle">
-					<p>商品資料</p>
-					<p>價格</p>
-					<p>數量</p>
-					<p>小計</p>
-				</li>
-				<li v-for="product in products" class="carTitle carInfo">
-					<img :src="images.blanketg" class="infoImg" />
-					<!-- <p>{{product.img}}</p> -->
-					<p>{{product.info}}</p>
-					<p>{{product.price}}</p>
-					<p>{{product.quantity}}</p>
-					<p>{{product.total}}</p>
-				</li>
-				<li class="lastTotal">
-					<p>小計{{product.total}}</p>
-					<p>運費{{product.freight}}</p>
-					<p>總計 {{product.total}}</p>
-				</li>
-			</ul>
-			<!--********** 表格2 送貨資訊 **********-->
-			<ul id="step2-2" class="step2 step2MB">
-				<li class="carName2-1">送貨資訊</li>
-				<!-- 資訊欄位 -->
-				<li class="send">
-					<div>
-						<label for="name" class="sendIn">收件人姓名</label>
-						<input type="text" id="name" class="np" />
-					</div>
-					<div>
-						<label for="phone" class="sendIn">連絡電話</label>
-						<input type="text" id="phone" class="np" />
-					</div>
-				</li>
-				<li class="addressout">
-					<div class="addressin">
-						<label for="address" class="sendIn">送貨地址</label>
-						<input type="text" id="address" class="sendAddress" />
-						<input type="checkbox" name="" id="same" class="checkSame" />
-						<label for="same">同會員資料</label>
-					</div>
-				</li>
-			</ul>
-			<!--********** 表格3 付款資訊 **********-->
-			<ul class="step2 step2MB">
-				<li class="carName2-1">付款資訊</li>
-				<li class="payfor">
-					<div class="paymain">
-						<p>付款方式</p>
-						<select name="" id="" class="paySelect">
-							<option value="" class="payOption">信用卡</option>
-							<option value="" class="payOption arrival">貨到付款</option>
-						</select>
-					</div>
-				</li>
-				<li class="card_info">
-					<div class="card_infoI">
-						<p class="cardAll">
-							<label for="payId">信用卡卡號</label>
-							<input type="text" id="payId" class="payId payInput" /> -
-							<input type="text" class="payId payInput" /> -
-							<input type="text" class="payId payInput" /> -
-							<input type="text" class="payId payInput" />
-						</p>
-						<p class="cardAll">
-							<label for="date">到期日</label>
+			<!---------- 結帳流程一 ---------->
+			<div v-if="step == 'A'" class="stepA container-lg">
+				<!--********** 購物車 **********-->
+				<ul id="step1" class="step1">
+					<li class="carName">購物車</li>
+					<li class="carTitle">
+						<p>商品資料</p>
+						<p>價格</p>
+						<p>數量</p>
+						<p>小計</p>
+					</li>
+					<li v-for="(product, index) in products" class="carTitle carInfo">
+						<img :src="product.img" class="infoImg" />
+						<p>{{product.info}}</p>
+						<p>NT${{product.price}}</p>
+						<p>
 							<input
+								type="button"
+								class="addBtn mbBtn"
+								value="-"
+								@click="add(index, -1)"
+							/><input
 								type="text"
-								id="date"
-								class="month date payInput"
-								placeholder="MM"
+								class="quantity"
+								v-model="product.quantity"
+							/><input
+								type="button"
+								class="subBtn mbBtn"
+								value="+"
+								@click="add(index, 1)"
 							/>
-							/
-							<input type="text" class="year date payInput" placeholder="YY" />
 						</p>
-					</div>
-					<div class="card_infoI">
-						<p class="cardname cardAll">
-							<label for="cardname">持卡人姓名</label>
-							<input type="text" id="cardname" class="payInput" />
-						</p>
-						<p class="cardAll">
-							<label for="CSC">安全碼</label>
-							<input type="text" id="CSC" class="payInput" />
-						</p>
-					</div>
-				</li>
-			</ul>
+						<p>NT$ {{product.price * product.quantity}}</p>
+						<img
+							src="./img/icon/garbageCan.png"
+							class="garbageCan"
+							@click="del(index)"
+						/>
+					</li>
+				</ul>
+				<!--********** 訂單資訊 **********-->
+				<ul id="step1-1" class="step1 step1Down">
+					<li class="carName">訂單資訊</li>
+					<li class="productInfo">
+						<p>運費</p>
+						<p>NT$ 0</p>
+						<p>合計</p>
+						<p>NT$ {{sumTotal}}</p>
+					</li>
+				</ul>
+				<button class="gotoPay" @click="step = 'B'">前往結帳</button>
+			</div>
 
-			<input type="submit" value="提交訂單" class="paysub" />
-		</div>
-		<!---------- 結帳流程三 ---------->
-		<div class="stepC container-lg">
-			<h3>訂單已完成，您的訂單編號為#20220311</h3>
-			<h5>您可以前往(<a href="" class="myMB">我的會員</a>)查詢訂單狀態</h5>
-			<button class="gogo">繼續購物</button>
-		</div>
+			<!---------- 結帳流程二 ---------->
+			<div v-else-if="step == 'B'" class="stepB container-lg">
+				<!--********** 表格1 總計 **********-->
+				<ul id="step2" class="step2">
+					<li class="carName2">
+						<p class="titleTop">總計NT$ {{sumTotal}}</p>
+						<p class="titleDown">購物車(共{{sumCount}}項)</p>
+					</li>
+					<li class="carTitle">
+						<p>商品資料</p>
+						<p>價格</p>
+						<p>數量</p>
+						<p>小計</p>
+					</li>
+					<li v-for="(product, index) in products" class="carTitle carInfo">
+						<img :src="product.img" class="infoImg" />
+						<p>{{product.info}}</p>
+						<p>{{product.price}}</p>
+						<p>{{product.quantity}}</p>
+						<p>{{product.price * product.quantity}}</p>
+					</li>
+					<li class="lastTotal">
+						<p>運費NT$ 0</p>
+						<p>總計NT$ {{sumTotal}}</p>
+					</li>
+				</ul>
+				<!--********** 表格2 送貨資訊 **********-->
+				<ul id="step2-2" class="step2 step2MB">
+					<li class="carName2-1">送貨資訊</li>
+					<!-- 資訊欄位 -->
+					<li class="send">
+						<div>
+							<label for="name" class="sendIn">收件人姓名</label>
+							<input type="text" id="name" class="np" />
+						</div>
+						<div>
+							<label for="phone" class="sendIn">連絡電話</label>
+							<input type="text" id="phone" class="np" />
+						</div>
+					</li>
+					<li class="addressout">
+						<div class="addressin">
+							<label for="address" class="sendIn">送貨地址</label>
+							<input type="text" id="address" class="sendAddress" />
+							<input type="checkbox" name="" id="same" class="checkSame" />
+							<label for="same">同會員資料</label>
+						</div>
+					</li>
+				</ul>
+				<!--********** 表格3 付款資訊 **********-->
+				<ul class="step2 step2MB">
+					<li class="carName2-1">付款資訊</li>
+					<li class="payfor">
+						<div class="paymain">
+							<p>付款方式</p>
+							<select name="" id="" class="paySelect" @change="payType = $event.target.value">
+								<option class="payOption" value="card">信用卡</option>
+								<option class="payOption arrival" value="arrival">貨到付款</option>
+							</select>
+						</div>
+					</li>
 
+					<li v-if="payType == 'card'" class="card_info">
+						<div class="card_infoI">
+							<p class="cardAll">
+								<label for="payId">信用卡卡號</label>
+								<input type="text" id="payId" class="payId payInput" placeholder="0000"/> -
+								<input type="text" class="payId payInput" placeholder="0000"/> -
+								<input type="text" class="payId payInput" placeholder="0000"/> -
+								<input type="text" class="payId payInput" placeholder="0000"/>
+							</p>
+							<p class="cardAll">
+								<label for="date">到期日</label>
+								<input
+									type="text"
+									id="date"
+									class="month date payInput"
+									placeholder="MM"
+								/>
+								/
+								<input
+									type="text"
+									class="year date payInput"
+									placeholder="YY"
+								/>
+							</p>
+						</div>
+						<div class="card_infoI">
+							<p class="cardname cardAll">
+								<label for="cardname">持卡人姓名</label>
+								<input type="text" id="cardname" class="payInput" />
+							</p>
+							<p class="cardAll">
+								<label for="CSC">安全碼</label>
+								<input type="text" id="CSC" class="payInput" />
+							</p>
+						</div>
+					</li>
+				</ul>
+				<div class="payGoback">
+					<button class="goback" @click="step = 'A'">回上一步</button>
+					<button class="paysub">提交訂單</button>
+				</div>
+			</div>
+			<!---------- 結帳流程三 ---------->
+			<div v-else-if="step == 'C'" class="stepC container-lg">
+				<h3>訂單已完成，您的訂單編號為#20220311</h3>
+				<h5>您可以前往(<a href="" class="myMB">我的會員</a>)查詢訂單狀態</h5>
+				<button class="gogo">繼續購物</button>
+			</div>
+		</div>
 		<!-- footer -->
 		@@include('./layout/footer.html')
 
