feat 新增/member.js/ 會員修改頁面修改/

--- a/src/member.html
+++ b/src/member.html
@@ -22,7 +22,7 @@
 <ul class="mem_fuc">
 <li><a href="./member_revise.html"><img src="./img/icon/mem.png" alt="">會員查詢</a></li>
 <li><a href="./member_activity.html"><img src="./img/icon/cal.png" alt="">我的活動</a></li>
-<li><a href="#"><img src="./img/icon/list.png" alt="">訂單管理</a></li>
+<li><a href="./member_checklist.html"><img src="./img/icon/list.png" alt="">訂單管理</a></li>
 
 </ul>
 
