--- a/src/member_activity.html
+++ b/src/member_activity.html
@@ -15,14 +15,17 @@
     <h2 class="memberTitle">會員中心</h2>
 </div>
 
-<article class="mem_ac_wrp">
 
 
-    <div class="mem_tab">
-        <input class="mem_btn "  type="button" value="會員資料" onclick="location.href='./member_revise.html'">
-        <input class="mem_btn on" type="button" value="我的活動" onclick="location.href='./animal.html'">
-        <input class="mem_btn" type="button" value="訂單查詢" onclick="location.href='./animal.html'">
-    </div>
+
+           <!-- 切換btn -->
+           <div class="mem_tab">
+            <input class="mem_btn "  type="button" value="會員資料" onclick="location.href='./member_revise.html'">
+            <input class="mem_btn on " type="button" value="我的活動" onclick="location.href='./member_activity/html'">
+            <input class="mem_btn" type="button" value="訂單查詢" onclick="location.href='./member_checklist.html'">
+        </div>
+
+        <article class="mem_ac_wrp"></article>
 
     <div class="act_list">
             <h3 class="act_date">5/20(六)</h3>
@@ -42,8 +45,12 @@
 
 </article>
 
+
+
  <!-- footer -->
  @@include('./layout/footer.html')
+
+ <script src="js/member_activity.js"></script>
 </body>
 
 </html>
