--- a/src/info.html
+++ b/src/info.html
@@ -19,7 +19,7 @@
 
     <!-- Section 1: 交通資訊 -->
     <section class="infoLocation container-lg">
-        <h3 class="locTitle margintop_80">交通資訊</h3>
+        <h3 class="locTitle">交通資訊</h3>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.9839445313764!2d121.27365901421894!3d24.13720197980821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34689338f46799ed%3A0xb62a5cb50d5871f5!2zNTQ25Y2X5oqV57ij5LuB5oSb6YSJ5LuB5ZKM6LevMTY26Jmf!5e0!3m2!1szh-TW!2stw!4v1648535811253!5m2!1szh-TW!2stw" width="100%" height="300px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="infoMap"></iframe>
         <h5 class="address">546南投縣仁愛鄉仁和路166號</h5>
         <div class="routeInfo">
@@ -41,7 +41,7 @@
     </section>
 
     <!-- Section 2: 票價&營業時間 -->
-    <section class="timenFee container-lg margintop_80">
+    <section class="timenFee container-lg">
         <h3 class="timenFeeTitle">票價&營業時間</h3>
         <div class="timenFeeMain">
             <div class="timenFeeContent">
@@ -86,7 +86,7 @@
     </section>
 
     <!-- Section 3: 入園須知 -->
-    <section class="infoRule container-lg margintop_100">
+    <section class="infoRule container-lg">
         <h3 class="ruleTitle">入園須知</h3>
         <h5>為了讓大家安全享受，並保護動物的健康，到場時請務必遵守以下規定。</h5>
         <h5 class="rule">寵物不得入場。</h5>
