--- a/src/checkout.html
+++ b/src/checkout.html
@@ -72,7 +72,7 @@
 						<p>NT$ {{sumTotal}}</p>
 					</li>
 				</ul>
-				<button class="gotoPay" @click="step = 'B'">前往結帳</button>
+				<button class="gotoPay" @click="goStepB">前往結帳</button>
 			</div>
 
 			<!---------- 結帳流程二 ---------->
