--- a/src/back_products.html
+++ b/src/back_products.html
@@ -38,7 +38,7 @@
                 <div class="btn2">
 
                     <label class="switch">
-                        <input type="checkbox">
+                        <input type="checkbox" id="show_off">
                         <span class="slider round"></span>
                     </label>
                     <span class="shoow_off">顯示已下架商品</span>
@@ -64,31 +64,31 @@
                         </ol>
                     </li>
 
-                    <li data-prd_number="37741249" data-prd_condition="on" class="list_item -on">
+                    <li data-prd_number="37741249" data-prd_name="鮮奶酪" data-prd_condition="on" class="list_item -on">
                         <label class="check_container">
                             <input type="checkbox">
                             <span class="checkmark"></span>
                         </label>
                         <img src="./img/porducts/papaya.jpg" alt="" class="prd_pic">
                         <p class="prd_number">37741249</p>
-                        <p c lass="prd_name">鮮奶酪</p>
+                        <p class="prd_name">鮮奶酪</p>
                         <p class="prd_cost">239</p>
                         <p class="prd_price">339</p>
-                        <p class="pd_inStock">20</p>
+                        <p class="prd_inStock">20</p>
                         <p class="prd_condition">上架中</p>
                         <button type="button" class="btn-green prd_edit">修改</button>
                     </li>
-                    <li data-prd_number="37741250" data-prd_condition="off" class="list_item -off">
+                    <li data-prd_number="37741250" data-prd_name="鮮奶酪" data-prd_condition="off" class="list_item -off">
                         <label class="check_container">
                             <input type="checkbox">
                             <span class="checkmark"></span>
                         </label>
                         <img src="./img/porducts/papaya.jpg" alt="" class="prd_pic">
                         <p class="prd_number">37741250</p>
-                        <p c lass="prd_name">鮮奶酪</p>
+                        <p class="prd_name">鮮奶酪</p>
                         <p class="prd_cost">239</p>
                         <p class="prd_price">339</p>
-                        <p class="pd_inStock">20</p>
+                        <p class="prd_inStock">20</p>
                         <p class="prd_condition">未上架</p>
                         <button type="button" class="btn-green prd_edit">修改</button>
                     </li>
@@ -126,6 +126,7 @@
         </div>
     </main>
 
+    <script src="./js/back_products.js"></script>
 </body>
 
 </html>
