--- a/src/member_activity.html
+++ b/src/member_activity.html
@@ -27,12 +27,12 @@
 
         <article class="mem_ac_wrp"></article>
 
-    <div class="act_list">
+    <div class="act_list" id="act_list" >
             <h3 class="act_date">5/20(六)</h3>
             <h4 class="act_title">乳牛吃飽飽 </h4>
             <p class="act_time">預約時間:下午:2:00 預約人數:4人 </p>
             
-            <button class="cancel_btn">取消行程</button>
+            <button class="cancel_btn" id="cancel_btn">取消行程</button>
     </div>
 
 
