--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,11 @@
     @@include('./layout/head.html', {
     "title" : "Sìkha 牧場"
     })
-
-    <script src="js/vendors/gsap.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script> -->
+    <script src="js/vendors/parallax.js"></script>
 </head>
 
 <body>
@@ -15,36 +18,38 @@
 
     <!-- 首圖 -->
     <div class="outer-wrapper">
+        <img src="img/index/sun.png" alt="sun" class="sun">
+        <img src="img/index/cloud.png" alt="cloud" class="top-cloud top-cloud1">
+        <img src="img/index/cloud.png" alt="cloud" class="top-cloud top-cloud2">
+        <img src="img/index/cloud.png" alt="cloud" class="top-cloud top-cloud3">
+        <img src="img/index/cloud.png" alt="cloud" class="top-cloud top-cloud4">
 
-    <div class="indexTop container-fluid">
-       <img src="img/index/sun.png" alt="sun" class="sun">
-       <img src="img/index/cloud.png" alt="cloud" class="top-cloud top-cloud1">
-       <img src="img/index/cloud.png" alt="cloud" class="top-cloud top-cloud2">
-       <img src="img/index/cloud.png" alt="cloud" class="top-cloud top-cloud3">
-       <img src="img/index/cloud.png" alt="cloud" class="top-cloud top-cloud4">
-       <img src="img/index/horse.png" alt="horse" class="top-horse">
-       <img src="img/index/deer.png" alt="deer" class="top-deer">
-       <img src="img/index/sheep.png" alt="sheep" class="top-sheep">
-       <img src="img/index/pig.png" alt="pig" class="top-pig">
-       <img src="img/index/alpaca.png" alt="alpaca" class="top-alpaca">
-       <img src="img/index/cow.png" alt="cow" class="top-cow">
+    <div class="indexTop container-fluid p_scene">
+       <img data-depth="0.2" src="img/index/horse.png" alt="horse" class="top-horse">
+       <img data-depth="0.1" src="img/index/deer.png" alt="deer" class="top-deer">
+       <img data-depth="0.3" src="img/index/sheep.png" alt="sheep" class="top-sheep">
+       <img data-depth="0.4" src="img/index/pig.png" alt="pig" class="top-pig">
+       <img data-depth="0.2" src="img/index/alpaca.png" alt="alpaca" class="top-alpaca">
+       <img data-depth="0.3" src="img/index/cow.png" alt="cow" class="top-cow">
     </div>
 
     <!-- Section 1: 介紹 -->
-    <section class="indexWelcome container-lg">
-        <img src="img/index/cloud.png" alt="cloud" class="side-cloud cloud5">
-        <img src="img/index/cloud.png" alt="cloud" class="side-cloud cloud6">
-        <h3 class="welcomeTitle">歡迎來到Sìkha牧場</h3>
-        <img src="img/material/circle_yellow_800.png" class="decYellow" alt="decoration_circle">
-        <img src="img/index/welcometo.png" class="mainImg" alt="cow_eating_grass">
-        <div class="nameIntroContainer">
-            <h5 class="nameIntro">Sìkha源自閩南語「四腳」拼音，可愛的四腳夥伴們住在南投山林的牧場，期待著兩腳朋友來臨喔！</h5>
-        </div>
-    </section>
+    <div class="welcome-wrapper">
+        <img data-depth="0.2" src="img/index/cloud.png" alt="cloud" class="side-cloud cloud5">
+        <img data-depth="0.3" src="img/index/cloud.png" alt="cloud" class="side-cloud cloud6">
+        <section class="indexWelcome container-lg p_scene" id="index-welcome">
+            <h3 data-depth="0.1" class="welcomeTitle">歡迎來到Sìkha牧場</h3>
+            <img data-depth="0.4" src="img/material/circle_yellow_800.png" class="decYellow" alt="decoration_circle">
+            <img data-depth="0" src="img/index/welcometo.png" class="mainImg" alt="cow_eating_grass">
+            <div data-depth="0.3" class="nameIntroContainer layer">
+                <h5 class="nameIntro">Sìkha源自閩南語「四腳」拼音，可愛的四腳夥伴們住在南投山林的牧場，期待著兩腳朋友來臨喔！</h5>
+            </div>
+        </section>
+    </div>
 
 
     <!-- Section 2: 最新消息 -->
-    <section class="indexNews container-lg margintop_250">
+    <section class="indexNews container-lg">
         <img src="img/index/cloud.png" alt="cloud" class="side-cloud cloud7">
         <div class="indexNewsTitle">
             <h3>最新消息</h3>
@@ -62,19 +67,30 @@
     </section>
 
     <!-- Section 3: 照片回憶 -->
-    <section class="indexMemory container-fluid margintop_180">
-        <img src="img/index/makememory_1200.jpg" alt="">
-        <div class="memoryText">
+    <!-- <section class="indexMemory container-fluid" id="memory">
+        <img data-depth="0.3" src="img/index/makememory_1200.jpg" alt="" class="layer">
+        <div data-depth="0.3" class="memoryText layer">
             <h4>在Sìkha留下<br>屬於你的特別回憶</h4>
             <p class="margintop_15">回憶能有很多形式，期望往後你眼見和煦的日光、嗅到青草的輕甜、拂過午後的微風，都能憶起曾在Sìkha留下的美好。</p>
         </div>
-    </section>
+    </section> -->
+    <ul class="indexMemory container-fluid p_scene" id="memory">
+        <li data-depth="0.1" class="layer">
+            <img src="img/index/makememory_1200.jpg" alt="" class="layer">
+        </li>
+        <li data-depth="0.6" class="layer">
+            <div class="memoryText layer">
+                <h4>在Sìkha留下<br>屬於你的特別回憶</h4>
+                <p class="margintop_15">回憶能有很多形式，期望往後你眼見和煦的日光、嗅到青草的輕甜、拂過午後的微風，都能憶起曾在Sìkha留下的美好。</p>
+            </div>
+        </li>
+    </ul>
 
     <!-- Section 4: 熱門活動 -->
-    <section class="indexActivity container-lg margintop_80">
+    <section class="indexActivity container-lg">
         <h3>熱門活動</h3>
         <h6>ACTIVITY</h6>
-        <div class="activity" id="indexActivity">
+        <div class="activity owl-carousel owl-theme" id="indexActivity">
             <div class="activityCard" v-for="activity in activities">
                 <div class="actPhotoContainer">
                     <img :src="activity.img" alt="activity_photo">
