feat: 顯示上架中活動數量, 顯示已下架活動的切換按鈕

--- a/src/back_activity.html
+++ b/src/back_activity.html
@@ -25,7 +25,7 @@
 
         <div class="showUnavailable">
             <label class="switch">
-                <input type="checkbox" checked>
+                <input type="checkbox" checked class="show-switch-btn">
                 <span class="slider round"></span>
             </label>
             <p class="showTitle">顯示已下架活動</p>
