--- a/src/info.html
+++ b/src/info.html
@@ -5,6 +5,7 @@
     @@include('./layout/head.html', {
     "title" : "Sìkha 牧場 | 園區資訊"
     })
+    <script src="js/vendors/parallax.js"></script>
 </head>
 
 <body>
@@ -20,9 +21,9 @@
     <!-- Section 1: 交通資訊 -->
     <section class="infoLocation container-lg">
         <h3 class="locTitle">交通資訊</h3>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.9839445313764!2d121.27365901421894!3d24.13720197980821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34689338f46799ed%3A0xb62a5cb50d5871f5!2zNTQ25Y2X5oqV57ij5LuB5oSb6YSJ5LuB5ZKM6LevMTY26Jmf!5e0!3m2!1szh-TW!2stw!4v1648535811253!5m2!1szh-TW!2stw" width="100%" height="300px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="infoMap"></iframe>
+        <iframe data-aos="zoom-in" data-aos-duration="1500" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3640.9839445313764!2d121.27365901421894!3d24.13720197980821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34689338f46799ed%3A0xb62a5cb50d5871f5!2zNTQ25Y2X5oqV57ij5LuB5oSb6YSJ5LuB5ZKM6LevMTY26Jmf!5e0!3m2!1szh-TW!2stw!4v1648535811253!5m2!1szh-TW!2stw" width="100%" height="300px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="infoMap"></iframe>
         <h5 class="address">546南投縣仁愛鄉仁和路166號</h5>
-        <div class="routeInfo">
+        <div class="routeInfo" data-aos="zoom-in" data-aos-duration="1500">
             <img src="img/info/car_greenbg.png" alt="car" class="routeIcon">
             <div class="routeText">
                 <p class="recommendRoute">國道三號行駛路線</p>
@@ -31,7 +32,7 @@
                 <p>國道一號→彰化系統交流道192K→轉國道三號南下→霧峰系統214K→國道六號起點0K→埔里端出口(國六終點)→左轉台14線→Sìkha牧場</p>
             </div>
         </div>
-        <div class="routeInfo">
+        <div class="routeInfo" data-aos="zoom-in" data-aos-duration="2000">
             <img src="img/info/bus_greenbg.png" alt="bus" class="routeIcon">
             <div class="routeText">
                 <p class="recommendRoute">建議路線</p>
@@ -42,9 +43,9 @@
 
     <!-- Section 2: 票價&營業時間 -->
     <section class="timenFee container-lg">
-        <h3 class="timenFeeTitle">票價&營業時間</h3>
-        <div class="timenFeeMain">
-            <div class="timenFeeContent">
+        <h3 class="timenFeeTitle" data-aos="fade-right" data-aos-duration="1500" >票價&營業時間</h3>
+        <div class="timenFeeMain p_scene">
+            <div data-depth="0.1" class="timenFeeContent">
                 <div class="tnfContentTitle">
                     <img src="img/info/info_clock.png" alt="">
                     <h5>營業時間</h5>
@@ -54,7 +55,7 @@
                     <h5 class="lastEntry greenText">最後入場時間 16:30</h5>
                 </div>
             </div>
-            <div class="timenFeeContent">
+            <div data-depth="0.1" class="timenFeeContent">
                 <div class="tnfContentTitle">
                     <img src="img/info/info_tickets.png" alt="">
                     <h5>票價 & 停車費</h5>
@@ -87,7 +88,7 @@
 
     <!-- Section 3: 入園須知 -->
     <section class="infoRule container-lg">
-        <h3 class="ruleTitle">入園須知</h3>
+        <h3 class="ruleTitle" data-aos="fade-right" data-aos-duration="1500">入園須知</h3>
         <h5>為了讓大家安全享受，並保護動物的健康，到場時請務必遵守以下規定。</h5>
         <h5 class="rule">寵物不得入場。</h5>
         <h5 class="rule">進入前請務必踩踏消毒墊。</h5>
@@ -100,6 +101,13 @@
 
     <!-- footer -->
     @@include('./layout/footer.html')
+    <script>
+        let scenes = [];
+        let scenesSelector = document.querySelectorAll('.p_scene');
+        for( i = 0; i < scenesSelector.length; i++ ){
+            scenes[i] = new Parallax(scenesSelector[i]);
+        };
+    </script>
 </body>
 
 </html>
