feat: 活動新增頁場次時間自動填入, 上下架時間限制

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
     <section class="indexActivity container-lg">
         <h3 data-aos="fade-right" data-aos-duration="1500">熱門活動</h3>
         <h6 data-aos="fade-right" data-aos-duration="2500">ACTIVITY</h6>
-        <div class="activity owl-carousel owl-theme" id="indexActivity">
+        <div class="activity owl-carousel owl-theme" id="indexActivity" data-aos="fade-right" data-aos-duration="2000">
             <div class="activityCard" v-for="activity in activities">
                 <div class="actPhotoContainer">
                     <img :src="activity.img" alt="activity_photo">
