--- a/src/back_activity_detail.html
+++ b/src/back_activity_detail.html
@@ -20,15 +20,15 @@
             </div>
             <div class="margintop_30">
                 <h5>活動名稱</h5>
-                <input type="text" name="name">
+                <input type="text" name="name" required>
             </div>
             <div class="oneline margintop_25">
                 <label>人數上限</label>
-                <input type="number">
+                <input type="number" required oninput="if(value<1)value=1">
             </div>
             <div class="oneline margintop_25">
                 <label>時間長度</label>
-                <input type="radio" id="30" name="time">
+                <input type="radio" id="30" name="time" checked>
                 <label for="30">30分鐘</label>
                 <input type="radio" id="60" name="time">
                 <label for="60">60分鐘</label>
@@ -37,39 +37,39 @@
             </div>
             <div class="oneline margintop_30">
                 <label for="">場次一時間</label>
-                <input type="time">
+                <input type="time" class="time-start" required>
                 <h5 class="tilde">~</h5>
-                <input type="time" readonly>
+                <input type="time" class="time-end" readonly>
             </div>
             <div class="oneline margintop_25">
                 <label for="">場次二時間</label>
-                <input type="time">
+                <input type="time" class="time-start" required>
                 <h5 class="tilde">~</h5>
-                <input type="time" readonly>
+                <input type="time" class="time-end" readonly>
             </div>
             <div class="oneline margintop_25">
                 <label for="">場次三時間</label>
-                <input type="time">
+                <input type="time" class="time-start" required>
                 <h5 class="tilde">~</h5>
-                <input type="time" readonly>
+                <input type="time" class="time-end" readonly>
             </div>
             <div class="margintop_25">
                 <h5>活動介紹</h5>
-                <textarea rows="10" cols="50"></textarea>
+                <textarea rows="10" cols="50" required></textarea>
             </div>
             <div class="oneline margintop_30">
                 <label for="">上架時間</label>
-                <input type="date">
-                <input type="time" value="23:59">
+                <input type="date" id="on_date" required>
+                <input type="time" value="23:59" id="on_time">
             </div>
             <div class="oneline margintop_25">
                 <label for="">下架時間</label>
-                <input type="date">
-                <input type="time" value="23:59">
+                <input type="date" id="off_date">
+                <input type="time" value="23:59" id="off_time">
             </div>
 
             <div class="buttons">
-                <button type="button" class="btn-green">確認</button>
+                <button type="submit" class="btn-green">確認</button>
                 <a href="back_activity.html"><button type="button" class="btn-border">取消</button></a>
             </div>
             
