--- a/src/member_checklist.html
+++ b/src/member_checklist.html
@@ -23,9 +23,9 @@
     </div>
 
 
-
-
-    <div class="accordion" id="accordionExample">
+<div class="mb_cl_wrp">
+<ul class=".cl_list">
+    <!-- <div class="accordion" id="accordionExample"> -->
                 <li class="cl_t accordion-header" id="headingOne">
                     <p>訂單日期</p>
                     <p>訂單編號</p>
@@ -57,6 +57,7 @@
             </div>
             </div>
 
+             </div>
              </div>
 
 
