--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
     <!-- header -->
     @@include('./layout/header.html')
 
+    @@include('./layout/login_register.html')
+
     <!-- 首圖 -->
     <div class="outer-wrapper">
         <img src="img/index/sun.png" alt="sun" class="sun">
