--- a/src/game.html
+++ b/src/game.html
@@ -5,25 +5,218 @@
     @@include('./layout/head.html', {
     "title" : "Sìkha 牧場"
     })
+    <style>
+        html{
+            cursor: none;
+        }
+        body{
+            margin: 0;
+            padding: 0;
+        }
+        img{
+            user-select: none;
+            pointer-events: none;
+        }
+        h4{
+            text-align: center;
+            padding-top: 50px;
+        }
+        p{
+            padding-top: 20px;
+            margin-bottom: 50px;
+            text-align: center;
+        }
+        .game-bg{
+            background-image: url("img/game/bg.jpg");
+            background-size: contain;
+            width: 100%;
+            height: 100vh;
+            /* position: relative; */
+        }
+
+        .sheep{
+            position: relative;
+            /* border: 1px solid blue; */
+            display: block;
+            /* display: flex; */
+            /* top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%); */
+            overflow: hidden;
+            width: 400px;
+            margin: 0 auto;
+        }
+
+        .fur{
+            position: absolute;
+            z-index: 40;
+
+        }
+
+
+        .sheep-img, .sheep-done{
+            padding-right: 0px;
+            width: 100%;
+        }
+        .shaver{
+            position: fixed;
+            /* border: 1px solid blue; */
+            width: 150px;
+            z-index: 50;
+        }
+
+        .fall{
+            animation: fall 2s ease;
+        }
+
+        @keyframes fall {
+            0%{
+                transform: translateY(0), rotate(10deg);
+                opacity: 1;
+            }
+            50%{
+                transform: translateY(100%), rotate(-10deg);
+            }
+            75%{
+                opacity: .8;
+            }
+            100%{
+                transform: translateY(200%);
+                opacity: 0;
+            }            
+        }
+
+    </style>
 </head>
 
 <body>
-    <!-- header -->
-    @@include('./layout/header.html')
-
-    <main class="main_out">
-
-        <div class="game_in">
-            <img src="./img/game/sheep 3.png" alt="" class="sheep">
-            <img src="./img/game/hige_shaver_kaitenshiki 2.png" alt="" class="kai">
+    <img src="img/game/shaver.png" alt="" class="shaver" id="shaver">
+    <div class="game-bg">
+        <h4>剃羊毛達人</h4>
+        <p>移動滑鼠來幫綿羊剃毛吧！</p>
+        <div class="sheep">
+            <!-- <div class="fur"></div> -->
+            <img src="img/game/no_fur.png" alt="" class="sheep-img">
+            <img src="img/game/sheep_after.png" alt="" class="sheep-done" style="display: none;">
+            <!-- <div class="fur" style="top: 8px; left: 53px;"> -->
+            <div class="fur" style="top: -20px; left: 38px;">
+                <img src="img/game/headfur.png" alt="" >
+            </div>
+            <div class="fur" style="top: 98px; left: 76px;">
+                <img src="img/game/fur8.png" alt="" >
+            </div>
+            <div class="fur" style="top: 81px; left: 124px;">
+                <img src="img/game/fur7.png" alt="" >
+            </div>
+            <!-- ----- -->
+            <div class="fur" style="top: 140px; left: 88px;">
+                <img src="img/game/fur8.png" alt="" >
+            </div>
+            <div class="fur" style="top: 141px; left: 131px;">
+                <img src="img/game/fur7.png" alt="" >
+            </div>
+            <div class="fur" style="top: 104px; left: 190px;">
+                <img src="img/game/fur8.png" alt="" >
+            </div>
+            <!-- ----- -->
+            <div class="fur" style="top: 185px; left: 88px;">
+                <img src="img/game/fur8.png" alt="" >
+            </div>
+            <div class="fur" style="top: 200px; left: 162px;">
+                <img src="img/game/fur7.png" alt="" >
+            </div>
+            <div class="fur" style="top: 153px; left: 187px;">
+                <img src="img/game/fur8.png" alt="" >
+            </div>
+            <div class="fur" style="top: 106px; left: 245px;">
+                <img src="img/game/fur7.png" alt="" >
+            </div>
+            <div class="fur" style="top: 119px; left: 300px;">
+                <img src="img/game/fur8.png" alt="" >
+            </div>
+            <!-- ----- -->
+            <div class="fur" style="top: 226px; left: 120px;">
+                <img src="img/game/fur8.png" alt="" >
+            </div>
+            <div class="fur" style="top: 214px; left: 219px;">
+                <img src="img/game/fur7.png" alt="" >
+            </div>
+            <div class="fur" style="top: 162px; left: 228px;">
+                <img src="img/game/fur8.png" alt="" >
+            </div>
+            <div class="fur" style="top: 166px; left: 276px;">
+                <img src="img/game/fur7.png" alt="" >
+            </div>
+            <div class="fur" style="top: 139px; left: 326px;">
+                <img src="img/game/fur8.png" alt="" >
+            </div>
+            <!-- ----- -->
+            <div class="fur" style="top: 234px; left: 160px;">
+                <img src="img/game/fur8.png" alt="" >
+            </div>
+            <div class="fur" style="top: 211px; left: 272px;">
+                <img src="img/game/fur7.png" alt="" >
+            </div>
+            <div class="fur" style="top: 234px; left: 197px;">
+                <img src="img/game/fur8.png" alt="" >
+            </div>
+            <div class="fur" style="top: 181px; left: 317px;">
+                <img src="img/game/fur7.png" alt="" >
+            </div>
+            <div class="fur" style="top: 230px; left: 326px;">
+                <img src="img/game/fur8.png" alt="" >
+            </div>
+            
         </div>
+    </div>
 
-    </main>
+    <script>
+        let shaver = document.getElementById("shaver");
+        let fur = document.querySelectorAll(".fur");
+        // let fur_x = fur.pageX;
+        // console.log(fur_x);
+        let fur_x = $('.fur').offset().top + 120;
+        let fur_y = $('.fur').offset().left + 120;
+        // console.log(fur_x);
+        // console.log(fur_y);
+        // console.log(fur.clientTop);
+        document.addEventListener("mousemove", function(e){
+            // console.log(e.pageX); // 滑鼠距離頁面最左側的距離
+            // console.log(e.pageY); // 滑鼠距離頁面最上方的距離
+            //console.log(window.scrollY);
+            
+            shaver.style.left = e.pageX - 60 + "px";
+            shaver.style.top = e.pageY - window.scrollY - 60 + "px";
+            if(document.querySelector('.fur') == undefined){
+                $('.sheep-img').fadeOut(2000);
+                setTimeout(function(){
+                    $('.sheep-done').fadeIn(2000);
+                }, 2000)
+            }
 
-    <!-- footer -->
-    @@include('./layout/footer.html')
+        });
 
-    <script src="js/index.min.js"></script>
+        fur.forEach(function(el){
+            // console.log(el);
+            el.addEventListener("mousemove", function(){
+                // console.log(0);
+                el.classList.add("fall");
+                setTimeout(function(){
+                    el.remove();
+                }, 2000)
+            });
+        });
+
+        gsap.to('.shaver', {
+            duration: 1,
+            repeat: -1,
+            // repeatRefresh: true,
+            keyframes: [
+                { duration: 1, rotation: 10},
+                { duration: 1, rotation: 0},
+            ]
+        });
+    </script>
 </body>
 
 </html>
