--- a/src/news.html
+++ b/src/news.html
@@ -49,7 +49,10 @@
             <a href="" class="min_news">
                 <img src="./img/news/Rectangle 1969.png" alt="">
                 <h5>2022/2/28</h5>
-                <h5>【粉萌春日祭】3月周末例假日門票優惠開始啦!</h5>
+                <h5>【粉萌春日祭】3月周末例假日門票
+                    <br>
+                    優惠開始啦!
+                </h5>
             </a>
 
             <a href="" class="min_news">
