--- a/src/news_in.html
+++ b/src/news_in.html
@@ -20,16 +20,16 @@
             <h2>最新消息</h2>
         </div>
 
-        <main class="main_min">
+        <main class="main_min container-lg">
 
             <div class="divtop">
                 <h3>歡慶兒童節 帶小孩來牧場放電囉</h3>
                 <pre>發布日期      3/15</pre>
             </div>
 
-            <div class="down">
+            <div class="down container-lg">
 
-                <div class="left">
+                <div class="left container-lg">
                     <p>在兒童節4/2~4/5號連假期間，
                         <br>
                         12歲以下兒童通通免費入園!
@@ -42,14 +42,17 @@
                         Sìkha 牧場度過美好時光
                     </p>
 
-                    <a href=""> <-返回列表 </a>
-                    <br><br><br><br>
-                    <a href=""> <-上一則 </a>
-                    <a href=""> 下一則-> </a>
+                    <a href="">
+                        <-返回列表 </a>
+                            <br><br><br><br>
+                            <a href="">
+                                <-上一則 </a>
+                                    <a href=""> 下一則-> </a>
 
                 </div>
-
-                <img src="./img/news/Rectangle 196.png" alt="" class="right">
+                <div class="right container-lg">
+                    <img src="./img/news/Rectangle 196.png" alt="">
+                </div>
             </div>
 
 
