style: index RWD 修正

--- a/src/index.html
+++ b/src/index.html
@@ -81,8 +81,10 @@
         </li>
         <li data-depth="0.6" class="layer">
             <div class="memoryText layer">
-                <h4>在Sìkha留下<br>屬於你的特別回憶</h4>
-                <p class="margintop_15">回憶能有很多形式，期望往後你眼見和煦的日光、嗅到青草的輕甜、拂過午後的微風，都能憶起曾在Sìkha留下的美好。</p>
+                <div class="container-lg">
+                    <h4>在Sìkha留下<br>屬於你的特別回憶</h4>
+                    <p class="margintop_15">回憶能有很多形式，期望往後你眼見和煦的日光、嗅到青草的輕甜、拂過午後的微風，都能憶起曾在Sìkha留下的美好。</p>
+                </div>
             </div>
         </li>
     </ul>
