style: game.html RWD

--- a/src/game.html
+++ b/src/game.html
@@ -66,6 +66,7 @@
             }
             .game-bg{
                 height: 95vh;
+                position: fixed;
             }
             .sheep{
                 transform: scale(.7) translateX(-12%);
